--- a/client/src/pages/AdminPages/AdminManageSectors/adminSectors.css
+++ b/client/src/pages/AdminPages/AdminManageSectors/adminSectors.css
@@ -15,3 +15,8 @@
     box-shadow: 0 0.2rem 0.25rem rgba(0, 0, 0, 0.1);
     margin-bottom: 2rem;
 }
+
+.btn-back {
+    display: flex;
+    justify-content: end;
+}
