--- a/client/src/components/FormCreateTest/formCreateTest.css
+++ b/client/src/components/FormCreateTest/formCreateTest.css
@@ -5,6 +5,19 @@
   width: calc(100% - 20px)
 }
 
+@media(width<600px){
+  .ct-main {
+    padding-top: 0 !important;
+    width: 390px;
+  }
+  .create-test-container{
+    margin-left: 0;
+    width: max-content;
+  }
+  .add-question{
+    padding-inline: 0 !important;
+  }
+}
 
 .create-main{
   display: flex;
@@ -13,13 +26,26 @@
   align-items: center;
 }
 
+@media(width<600px){
+  .create-main{
+    padding-top: 0 !important;
+    margin: 0;
+  }
+}
+
 .title-form {
+  text-align: center;
   font-size: 3rem;
   font-weight: 600;
   color: #475569;
   padding: 1rem;
-  margin-bottom: 1rem;
-  margin-inline-start: 13rem;
+  margin-bottom: 0;
+}
+
+@media(width<600px) {
+  .title-form {
+    font-size: 2rem;
+  }
 }
 .create-section{
   width: 70%;
@@ -44,6 +70,20 @@
     width: 90%;
     padding: .5rem;
     margin-inline-start: 1rem;
+  }
+}
+
+@media(width<600px){
+  .create-section{
+    width: fit-content;
+  }
+  input{
+    margin-inline-start: 0 !important;
+    width: 100% !important;
+  }
+  .form-card{
+    padding: .5rem;
+    width: 100%;
   }
 }
 
@@ -92,6 +132,12 @@
   padding: 3rem;
 }
 
+@media(width<600px){
+  .btnOnsubmit{
+    justify-content: space-around;
+  }
+}
+
 .question-test{
   display: flex;
   flex-direction: column;
@@ -137,7 +183,7 @@
   color: red;
 }
 
-.icon{
+.upload-icon{
   width: 50px;
   height: 50px;
   cursor: pointer;
